--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <header>
         <h2>hello git</h2>
     </header>
+    <main>
+        <h2>hello git</h2>
+        <h2>hello git again</h2>
+        <h1>hello again</h1>
+    </main>
 </body>
 </html>
