--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <h2>hello git again</h2>
         <h1>hello again</h1>
     </main>
+    <footer>
+        <h2>hello git</h2>
+    </footer>
 </body>
 </html>
