--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
     <section>
         <h5>hello git</h5>
     </section>
+    <article>
+        <h6>hello git</h6>
+    </article>
 </body>
 </html>
